--- a/publiccode.yml
+++ b/publiccode.yml
@@ -10,7 +10,7 @@ landingURL: 'https://plugins.qgis.org/plugins/saveecobot_loader/'
 releaseDate: '2023-10-08'
 softwareVersion: '0.14'
 developmentStatus: beta
-softwareType: standalone/mobile
+softwareType: addon
 platforms:
   - linux
   - windows
